# USVControl

./: CMakeLists.txt  config.yaml  waypoints.gpx
fuzzyControllers/: CollectionControl.fll  CourseControl.fll  ObstacleControl.fll
include/: filter.hpp  functionUtils.hpp  getDecMagnet.hpp  lidarSensor.hpp  main.hpp  ncnnModel.hpp  readConfig.hpp  serialCom.hpp  test.hpp  utils.hpp  waypoints.hpp
include/controllers/: collectionControl.hpp  courseControl.hpp  obstacleControl.hpp
lib/: CMakeLists.txt
lib/filter/: filt.cpp  filt.hpp
lib/serialib/: serialib.cpp
lib/tinyxml2/: tinyxml2.cpp  tinyxml2.hpp
model/: BottleDet.param
src/: main.cpp
